<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tootls="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/item_name"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Item_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_Item_Name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/price"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="12dp"
            android:text="@string/quantity"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/increment_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="+1"
            android:theme="@style/button"
            app:cornerRadius="10dp"
            app:elevation="4dp" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="0"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decrement_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="-1"
            android:theme="@style/button"
            app:cornerRadius="10dp"
            app:elevation="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="4dp"
                android:text="@string/Order_button"
                android:theme="@style/button"
                app:cornerRadius="50dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
